# vhs

./: .buildinfo  .cl_keeper.yaml  .coveragerc.toml  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  genindex.html  index.html  objects.inv  pyproject.toml  pytest.toml  search.html  searchindex.js  sphinx_vhs.py
.github/: dependabot.yml
.github/workflows/: ci.yaml
_sources/: index.rst.txt
docs/: Makefile
docs/source/: conf.py  index.rst
docs/source/_tapes/: example.tape  simple.tape
sphinx_vhs/: __init__.py
test/: conftest.py  test_sphinx_vhs.py
test/roots/test-basics/: conf.py  index.rst
test/roots/test-basics/_tapes/: a.tape  b.tape
