[project]
name = "sphinx-vhs"
authors = [{name = "Tamika Nomara", email = "taminomara@gmail.com"}]
description = "Sphinx plugin that generates terminal GIFs using charm's VHS"
dynamic = ["version"]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Extension",
    "Topic :: Software Development :: Documentation",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Intended Audience :: Developers",
    "Typing :: Typed",
]
dependencies = [
    "sphinx>=8.0,<9.0",
    "vhs>=1.0.0,<2.0",
]

[dependency-groups]
dev = [
    "pytest-cov==7.0.0",
    {include-group = "test"},
    {include-group = "lint"},
    {include-group = "doc"},
]
test = [
    "pyright==1.1.405",
    "pytest==8.4.2",
    "sybil==9.2.0",
    "html5lib~=1.1",
]
lint = [
    "black==25.9.0",
    "isort==6.0.1",
    "pre-commit==4.3.0",
]
doc = [
    "sybil==9.2.0",
    "furo==2025.9.25",
    "sphinx_design==0.6.1",
]

[project.urls]
Documentation = "https://sphinx-vhs.readthedocs.io/en/stable/"
Issues = "https://github.com/sphinx-contrib/vhs/issues/"
Source = "https://github.com/sphinx-contrib/vhs/"
Changelog = "https://github.com/sphinx-contrib/vhs/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel>=0.40"]

[tool.setuptools_scm]
write_to = "sphinx_vhs/_version.py"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["--strict-markers", "-p no:doctest"]
testpaths = ["test", "sphinx_vhs", "docs"]

[tool.pyright]
include = ["sphinx_syntax"]
exclude = ["**/__pycache__"]
typeCheckingMode = "strict"
pythonVersion = "3.12"
pythonPlatform = "All"

reportMissingParameterType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnnecessaryIsInstance = "none"
reportUnnecessaryTypeIgnoreComment = "warning"

[tool.isort]
profile = "black"
skip_gitignore = true
